# clipboard2path-wsl

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md  clipboard2path.service  note.md  rustfmt.toml
.claude/: settings.json
.claude/skills/release/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
.wiki/: index.md  log.md
.wiki/concepts/: architecture-overview.md  why-clipboard2path-wsl.md  wsl2-clipboard-interop.md
.wiki/raw/articles/: architecture-overview.md  why-clipboard2path-wsl.md  wsl2-clipboard-interop.md
.wiki/schema/: categories.json  page-template.json
docs/: session-history.md  status.md
docs/ideas/: 001-implementation-strategy.md
docs/plans/: 20260406-clipboard2path-impl.md  20260406-v2-no-clipboard-write.md  20260406041253_setup-flow-refinement.md  20260406204808_powershell-png-and-wlpaste-wrapper.md  20260406222223_codebase-review-improvements.md
scripts/: install.sh  release.sh
src/: main.rs
src/domain/: backoff.rs  cleanup.rs  cli.rs  clipboard_change.rs  debounce.rs  image_convert.rs  mod.rs  path_gen.rs  path_validate.rs  runtime_dir.rs  shell_detect.rs  shell_hook.rs  systemd_unit.rs  wl_paste_wrapper.rs  wsl_detect.rs
src/infra/: change_signal.rs  clipboard.rs  command_runner.rs  file_system.rs  lifecycle.rs  login_shell.rs  mod.rs  path_notifier.rs  shell_installer.rs  systemd_installer.rs  wrapper_installer.rs
src/service/: converter.rs  daemon.rs  mod.rs  setup.rs  test_helpers.rs  watch.rs
tests/: wrapper_integration.sh
(+5 files in other folders)
