[package]
name = "clipboard2path-wsl"
version = "0.4.0"
edition = "2024"
description = "Save clipboard images to files on WSL2 and paste their paths via shell hooks, without touching the Windows clipboard"
license = "MIT"
repository = "https://github.com/ba0918/clipboard2path-wsl"
readme = "README.md"
keywords = ["wsl", "wsl2", "clipboard", "wayland", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ctrlc = "3"
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
x11rb = { version = "0.14.0", features = ["xfixes"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
